2008-12-29  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Documentation structure ideas.

2008-12-05  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	  Hightlight deprecation warnings.

2008-12-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Fix escaping.

2008-12-02  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Planning.

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Remove the sh -c here now that its back in scanobj.

	* tests/annotations/docs/tester-docs.xml:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	  Cosmetic template update.

2008-12-02  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Don't touch doctype header in expand-content-files.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Add deprecation warnings for signals and properties. Also reuse code
	  for since and stability levels there. Fixes #562655.

	* tests/gobject/src/gobject.c:
	  Add testcase for #562655.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-scangobj.in:
	* gtkdoc-scanobj.in:
	  Reintroduce "sh -c" and comment why its used. Add real libtool support
	  to old scanobj tool as well.

2008-12-01  Stefan Kost  <ensonic@users.sf.net>

	patch by: Matthias Clasen  <mclasen@redhat.com>

	* gtkdoc-mkdb.in:
	  Fix index-id generation for child and style properties. Fixes #562064.

2008-11-16  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* configure.in:
	* help/manual/C/gtk-doc-manual.xml:
	  Back to development.
	  
===  Release 1.11 ===

2008-11-16  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	* NEWS:
	  Releasing 1.11.

	* tests/Makefile.am:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	* tests/gtkdoctest.sh:
	  Fix make distcheck.

2008-11-06  Stefan Kost  <ensonic@users.sf.net>

	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  No install rules for test.

2008-11-06  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in: