@@ -1,5 +1,13 @@
 2008-12-29  Stefan Kost  <ensonic@users.sf.net>
 
+	patch by: Bruce van der Kooij  <brucevdkooij@gmail.com>
+
+	* help/manual/C/gtk-doc-manual.xml:
+	  Fixed three spelling errors (recommanded, conatins, alibrary).
+	  Fixes #565835.
+
+2008-12-29  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	  Documentation structure ideas.
 
